<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SAHomeMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="default_message">no message from home</string>
    <string name="home_monitor_url">http://24.6.171.151:8081</string>
    <string name="action_show_reg">Show Reg. ID</string>
    <string name="action_last_home_message">Last Msg. from Home</string>
    <string name="label_registration_id">Reg. ID: </string>
    <string name="home_monitor_audio_url">http://24.6.171.151:8000/webcam</string>
    <string name="label_play">Play</string>
    <string name="label_pause">Pause</string>
    <string name="label_stop">Stop</string>
    <string name="label_speaker">Speaker</string>
    <string name="action_show_home_monitor_url">Show Home Monitor URL</string>
    <string name="title_show_reg">Registration ID</string>
    <string name="title_show_home_monitor_url">Home Monitor URL</string>

</resources>
